fix alignment and colors

--- a/style.css
+++ b/style.css
@@ -1,18 +1,25 @@
 header {
 	display: flex;
 	flex-direction: row;
-	margin-bottom: 40px;
+	width: 100%;
+	height: 18%;
+	position: fixed;
+	z-index: 2;
+	background-color: rgba(60, 60, 60, 0.507);
 }
 
+.btn-container {
+	display: flex;
+}
 .logo img {
 	width: 80px;
 	height: 70px;
-	align-items: center;
+	opacity: 0.7;
 }
 
 h1 {
-	color: orange;
-	font-size: 38px;
+	color: white;
+	font-size: 28px;
 }
 
 ul {
@@ -22,7 +29,7 @@ ul {
 
 li a {
 	text-decoration: none;
-	color: orange;
+	color: white;
 	margin: 5px;
 	display: block;
 	line-height: 50px;
@@ -39,7 +46,7 @@ li a {
 	color: black;
 	width: 50%;
 	height: 50%;
-	top: 0;
+	top: 10%;
 	right: -100%;
 	z-index: 2;
 	padding: 10px;
@@ -47,6 +54,8 @@ li a {
 	list-style: none;
 	position: fixed;
 	overflow: hidden;
+	border-radius: 5px;
+	opacity: 1;
 }
 
 .nav-list {
@@ -69,17 +78,15 @@ li a {
 
 .openbtn {
 	background-color: rgb(97, 97, 97);
-	width: 40px;
-	height: 40px;
-	border-radius: 16px;
+	width: 30px;
+	height: 30px;
+	border-radius: 10px;
 	padding: 5px;
 	cursor: pointer;
 	color: #fff;
 	border: none;
-	margin: 20px;
-	position: fixed;
 	z-index: 1;
-	right: 10%;
+	margin: 5px;
 }
 
 .hidden-close-btn {
@@ -87,7 +94,7 @@ li a {
 }
 
 .closebtn {
-	background-color: orange;
+	background-color: white;
 	width: 20px;
 	height: 20px;
 	border-radius: 5px;
@@ -97,13 +104,18 @@ li a {
 	position: absolute;
 	cursor: pointer;
 	z-index: 1;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .header-button {
-	height: 20px;
-	width: 20px;
+	height: 30px;
+	width: 30px;
 	display: flex;
 	justify-content: center;
+	align-items: center;
+	margin: 5px;
 }
 
 body {
@@ -122,6 +134,7 @@ body {
 	width: 300px;
 	border: 3px solid purple;
 	overflow: scroll;
+	margin-top: 40%;
 }
 #row {
 	display: flex;
